--- a/login/register.html
+++ b/login/register.html
@@ -1,31 +1,30 @@
 <html>
   <head>
-    <title>login page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="login.css" rel="stylesheet">
+    <title>Register</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='register.css') }}">
   </head>
 
   <body>
-<div class="container">
-    <h1>Register</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
+    <div class="registerbox">
+      <h1>Register</h1>
+      <p>Please fill in this form to create an account.</p>
 
-    <label for="email"><b>Email</b></label>
+    <p>Email</p>
     <input type="text" placeholder="Enter Email" name="email" required>
-
-    <label for="psw"><b>Password</b></label>
+    <p>Username</p>
+    <input type="text" placeholder="Enter Username" name="username" required>
+    <p>Password</p>
     <input type="password" placeholder="Enter Password" name="psw" required>
+    <p>Repeat Password</p>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-        <hr>
-
+    <button type="submit" class="registerbtn">Register</button>
+  </div>
+      <div class = "termsprivacy">
         <p>By creating an account you agree to our <a href="termsandprivacy">Terms & Privacy</a>.</p>
-        <button type="submit" class="registerbtn">Register</button>
       </div>
 
-      <div class="container signin">
+      <div class="already">
         <p>Already have an account? <a href="login">Sign in</a>.</p>
       </div>
     </form>
